<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
		 xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.skymatic</groupId>
	<artifactId>fuse-panama</artifactId>
	<version>0.1.0-SNAPSHOT</version>

	<dependencies>
		<dependency>
			<groupId>com.github.serceman</groupId>
			<artifactId>jnr-fuse</artifactId>
			<version>0.5.5</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>1.7.29</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.openjdk.jmh</groupId>
			<artifactId>jmh-core</artifactId>
			<version>1.27</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.openjdk.jmh</groupId>
			<artifactId>jmh-generator-annprocess</artifactId>
			<version>1.27</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.0</version>
				<configuration>
					<release>17</release>
					<encoding>UTF-8</encoding>
					<showWarnings>true</showWarnings>
					<compilerArgs>
						<arg>--add-modules</arg>
						<arg>jdk.incubator.foreign</arg>
					</compilerArgs>
				</configuration>
			</plugin>
		</plugins>
	</build>

	<profiles>
		<profile>
			<id>jextract</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-enforcer-plugin</artifactId>
						<version>3.0.0-M3</version>
						<executions>
							<execution>
								<id>check-preconditions</id>
								<goals>
									<goal>enforce</goal>
								</goals>
								<configuration>
									<rules>
										<requireOS>
											<family>mac</family>
											<message>This build configuration requires macOS.</message>
										</requireOS>
										<requireFilesExist>
											<files>
												<file>/Applications/Xcode.app</file>
											</files>
											<message>XCode not found</message>
										</requireFilesExist>
									</rules>
								</configuration>
							</execution>
						</executions>
					</plugin>
					<plugin>
						<groupId>org.codehaus.mojo</groupId>
						<artifactId>exec-maven-plugin</artifactId>
						<version>1.6.0</version>
						<executions>
							<execution>
								<id>jextract</id>
								<goals>
									<goal>exec</goal>
								</goals>
								<phase>generate-sources</phase>
								<configuration>
									<executable>${java.home}/bin/jextract</executable>
									<workingDirectory>${project.basedir}</workingDirectory>
									<arguments>
										<argument>--source</argument>
										<argument>-l</argument>
										<argument>fuse</argument>
										<argument>-d</argument>
										<argument>${project.build.sourceDirectory}</argument>
										<argument>-t</argument>
										<argument>de.skymatic.fusepanama.lowlevel</argument>
										<argument>-I</argument>
										<argument>/usr/local/include</argument>
										<argument>-I</argument>
										<argument>/Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX.sdk/usr/include/</argument>
										<argument>-C-D_FILE_OFFSET_BITS=64</argument>
										<argument>-C-DFUSE_USE_VERSION=29</argument>
										<!-- structs: -->
										<argument>--include-struct</argument>
										<argument>fuse_operations</argument>
										<argument>--include-struct</argument>
										<argument>fuse_file_info</argument>
										<argument>--include-struct</argument>
										<argument>fuse_context</argument>
										<argument>--include-struct</argument>
										<argument>stat</argument>
										<argument>--include-struct</argument>
										<argument>timespec</argument>
										<!-- typedefs: -->
										<argument>--include-typedef</argument>
										<argument>fuse_fill_dir_t</argument>
										<!-- functions: -->
										<argument>--include-function</argument>
										<argument>fuse_main_real</argument>
										<argument>--include-function</argument>
										<argument>fuse_get_context</argument>
										<argument>--include-function</argument>
										<argument>fuse_exit</argument>
										<!-- extract fuse.h header: -->
										<argument>${project.basedir}/libfuse/include/fuse.h</argument>
										<!--<argument>/usr/local/include/fuse/fuse.h</argument>-->
									</arguments>
								</configuration>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

</project>